--- a/blog.html
+++ b/blog.html
@@ -1,9 +1,31 @@
-<?php include 'cmps/header.php' ?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>AN  - Github.io</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="Github io - Portfolio">
+	<meta name="keywords" content="portfolio, github, onepage, creative, html">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Favicon -->   
+	<link href="img/favicon.ico" rel="shortcut icon"/>
+
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700" rel="stylesheet">
+
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="assets/css/magnific-popup.css"/>
+	<link rel="stylesheet" href="assets/css/style.css"/>
 
 
-<!-- header section start -->
-<?php include 'cmps/nav.php' ?>
-<!-- header section end -->
+	<!--[if lt IE 9]>
+	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+
+</head>
+<body>
 
 	<!-- intro section start -->
 	<section class="intro-section">
@@ -115,5 +137,33 @@
 	<!-- page section end -->
 
 <!-- footer section start -->
-<?php include 'cmps/footer.php' ?>
+<footer class="footer-section text-center">
+	<div class="container">
+		<h2 class="section-title mb-5">Let’s work together</h2>
+		<a href="" class="site-btn">Get in touch</a>
+		<div class="social-links">
+			<a href=""><span class="fa fa-pinterest"></span></a>
+			<a href=""><span class="fa fa-linkedin"></span></a>
+			<a href=""><span class="fa fa-instagram"></span></a>
+			<a href=""><span class="fa fa-facebook"></span></a>
+			<a href=""><span class="fa fa-twitter"></span></a>
+		</div>
+		<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+</div>
+	</div>
+</footer>
 <!-- footer section end -->
+
+
+
+	<!--====== Javascripts & Jquery ======-->
+	<script src="assets/js/jquery-2.1.4.min.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/mixitup.min.js"></script>
+	<script src="assets/js/magnific-popup.min.js"></script>
+	<script src="assets/js/main.js"></script>
+	
+</body>
+</html>
