--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<div class="container-fluid p-md-0 ">
 		<div class="row portfolios-area">
 			<div class="mix col-lg-6 col-md-6 web">
-				<a href="https://github.com/annanoukou/ReactWeb" class="portfolio-item set-bg" data-setbg="assets/img/portfolio/ReactAppSimple.png">
+				<a href="https://annanoukou.github.io/ReactWeb" class="portfolio-item set-bg" data-setbg="assets/img/portfolio/ReactAppSimple.png">
 					<div class="pi-inner">
 						<h2>+ See Project</h2>
 					</div>						
